[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scripts/Character/CharacterRod.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Character/CharacterAnim.gd" type="Script" id=2]
[ext_resource path="res://Anims/FX/SF_FlameSmall.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Scripts/Character/CharacterMotor.gd" type="Script" id=4]
[ext_resource path="res://Anims/Character/ANIM_Character_Idle_Left.tres" type="Animation" id=5]
[ext_resource path="res://Anims/Character/ANIM_Character_Idle_Right.tres" type="Animation" id=6]
[ext_resource path="res://Anims/Character/ANIM_Character_Walk_Up.tres" type="Animation" id=7]
[ext_resource path="res://Scripts/Character/CharacterControl.gd" type="Script" id=8]
[ext_resource path="res://Anims/Character/ANIM_Character_Idle_Down.tres" type="Animation" id=9]
[ext_resource path="res://Anims/Character/ANIM_Character_Idle_Up.tres" type="Animation" id=10]
[ext_resource path="res://Anims/Character/ANIM_Character_Walk_Down.tres" type="Animation" id=11]
[ext_resource path="res://Anims/Character/ANIM_Character_Walk_Right.tres" type="Animation" id=12]
[ext_resource path="res://Anims/Character/ANIM_Character_Walk_Left.tres" type="Animation" id=13]
[ext_resource path="res://Sprites/Character/character_walk_spritesheet.png" type="Texture" id=14]
[ext_resource path="res://Anims/Character/ANIM_Character_Swing_Up.tres" type="Animation" id=15]
[ext_resource path="res://Anims/Character/ANIM_Character_Swing_Down.tres" type="Animation" id=16]
[ext_resource path="res://Anims/Character/ANIM_Character_Swing_Right.tres" type="Animation" id=17]
[ext_resource path="res://Anims/Character/ANIM_Character_Swing_Left.tres" type="Animation" id=18]
[ext_resource path="res://Audio/SFX/rod_light_on.ogg" type="AudioStream" id=19]
[ext_resource path="res://Audio/SFX/swing.ogg" type="AudioStream" id=20]
[ext_resource path="res://Audio/SFX/flame_light_off.ogg" type="AudioStream" id=21]
[ext_resource path="res://Prefabs/Projectiles/Fireball.tscn" type="PackedScene" id=22]
[ext_resource path="res://Anims/Character/ANIM_Character_Throw_Fireball_Down.tres" type="Animation" id=23]
[ext_resource path="res://Prefabs/Light/DiscLight2D.tscn" type="PackedScene" id=24]
[ext_resource path="res://Anims/Character/ANIM_Character_Throw_Fireball_Left.tres" type="Animation" id=25]
[ext_resource path="res://Anims/Character/ANIM_Character_Throw_Fireball_Right.tres" type="Animation" id=26]
[ext_resource path="res://Anims/Character/ANIM_Character_Throw_Fireball_Up.tres" type="Animation" id=27]
[ext_resource path="res://Prefabs/PFX/PFX_Ignite_Small.tscn" type="PackedScene" id=28]
[ext_resource path="res://Prefabs/PFX/PFX_Light_Off_Smoke.tscn" type="PackedScene" id=29]
[ext_resource path="res://Scripts/Character/Character.gd" type="Script" id=30]
[ext_resource path="res://Audio/SFX/sfx_walk_step.ogg" type="AudioStream" id=31]

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 5, 11, -5, 11, -5, 15, 5, 15 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RodFlame:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, -27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireballSpawnPoint:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7, 24 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 8.06226

[node name="Character" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 30 )

[node name="FireballSpawnPoint" type="Node2D" parent="."]
position = Vector2( -7, 24 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 128
position = Vector2( 0, -13 )
texture = ExtResource( 14 )
hframes = 24
frame = 11

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
light_mask = 256
occluder = SubResource( 6 )
light_mask = 256

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Character_Idle_Down = ExtResource( 9 )
anims/Character_Idle_Left = ExtResource( 5 )
anims/Character_Idle_Right = ExtResource( 6 )
anims/Character_Idle_Up = ExtResource( 10 )
anims/Character_Swing_Down = ExtResource( 16 )
anims/Character_Swing_Left = ExtResource( 18 )
anims/Character_Swing_Right = ExtResource( 17 )
anims/Character_Swing_Up = ExtResource( 15 )
anims/Character_Throw_Fireball_Down = ExtResource( 23 )
anims/Character_Throw_Fireball_Left = ExtResource( 25 )
anims/Character_Throw_Fireball_Right = ExtResource( 26 )
anims/Character_Throw_Fireball_Up = ExtResource( 27 )
anims/Character_Walk_Down = ExtResource( 11 )
anims/Character_Walk_Left = ExtResource( 13 )
anims/Character_Walk_Right = ExtResource( 12 )
anims/Character_Walk_Up = ExtResource( 7 )
anims/RESET = SubResource( 7 )

[node name="RodFlame" type="AnimatedSprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.905882 )
light_mask = 128
position = Vector2( -3, -27 )
frames = ExtResource( 3 )
offset = Vector2( 0, -4 )

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
bus = "SFX"

[node name="MotorSFXPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -15.0
bus = "SFX"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 3, 2, -3, 2, -5, 1, -5, -1, -3, -2, 3, -2, 5, -1, 5, 1 )

[node name="SwingHitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwingHitBox"]
position = Vector2( -26, 0 )
shape = SubResource( 5 )

[node name="CharacterControl" type="Node" parent="."]
script = ExtResource( 8 )

[node name="CharacterMotor" type="Node" parent="."]
script = ExtResource( 4 )
walk_step = ExtResource( 31 )
speed = 60.0

[node name="CharacterRod" type="Node" parent="."]
script = ExtResource( 1 )
fireball_prefab = ExtResource( 22 )
pfx_ignite_prefab = ExtResource( 28 )
pfx_light_off_smoke = ExtResource( 29 )
swing_sound = ExtResource( 20 )
throw_fireball_sound = ExtResource( 19 )
rod_light_on_sound = ExtResource( 19 )
rod_light_off_sound = ExtResource( 21 )

[node name="FlameTimer" type="Timer" parent="CharacterRod"]
wait_time = 5.0
one_shot = true

[node name="CharacterAnim" type="Node" parent="."]
script = ExtResource( 2 )

[node name="DiscLight2D" parent="." instance=ExtResource( 24 )]
shadow_item_cull_mask = 86

[connection signal="animation_finished" from="AnimationPlayer" to="CharacterRod" method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="SwingHitBox" to="CharacterRod" method="_on_SwingHitBox_area_entered"]
[connection signal="timeout" from="CharacterRod/FlameTimer" to="CharacterRod" method="_on_FlameTimer_timeout"]
